--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	</script>
 	<noscript><div><img src="https://mc.yandex.ru/watch/51672554" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
+    <meta charset="utf-8">
     <title>Aquacube. Изготовление и обслуживание аквариумов в Москве.</title>
     <meta name="keywords" content="Аквариум, купить аквариум, заказать аквариум, аквариум для дома, аквариум для офиса, аквариум для ресторана, обслуживание аквариума, ремонт аквариума, аквариумные рыбки">
     <meta name="description" content="Изготовление и обслуживание морских и пресноводных аквариумов для дома, офиса и ресторанов.">
